cmake_minimum_required(VERSION 3.6)
add_subdirectory(01-Characters-Strings-Formatting-Output)
add_subdirectory(02-Decisions)
add_subdirectory(03-Loops)
add_subdirectory(04-Functions)
add_subdirectory(05-Vectors-Files)
add_subdirectory(06-Structs-Classes)
add_subdirectory(07-Function-Templates)
add_subdirectory(08-Recursion)
